# text-to-speech-editing-app

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  DRIVE_MODE.md  GLOSSARY.md  PRODUCT_SPEC.md  ROADMAP.md
scripts/: collab-e2e.mjs  e2e.mjs  generate-icons.mjs  screenshot.mjs
server/: Dockerfile  README.md  package-lock.json  package.json  signaling.js
src/: App.tsx  collab-context.tsx  espeak-shims.d.ts  index.css  store.test.ts  store.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/: AIPanel.tsx  BookmarksPanel.tsx  ChapterMenu.tsx  CollabModal.tsx  Dashboard.tsx  DriveMode.tsx  ErrorBoundary.tsx  Library.tsx  NoteComposer.tsx  NotesPanel.tsx  PlaybackBar.tsx  Reader.tsx  SettingsModal.tsx  SidePanel.tsx  StoryBible.tsx  ThemeDecor.tsx  Workspace.tsx  icons.tsx
src/lib/: ai.ts  bible.test.ts  bible.ts  collab.test.ts  collab.ts  epub.test.ts  epub.ts  espeak.ts  import.test.ts  import.ts  mentions.test.ts  mentions.ts  parse.test.ts  parse.ts  pdf.test.ts  pdf.ts  speech.ts
