[package]
name = "storyscribe"
version = "0.1.0"
description = "StoryScribe — an audio-first revision companion for authors."
authors = ["StoryScribe"]
edition = "2021"

[lib]
name = "storyscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
